test/1.2/errors/T_EDEVIMP.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

/// ERROR EDEVIMP
import "../minimal.dml";

// Recursive
/// ERROR EDEVIMP
import "T_EDEVIMP.dml";
